[sd-4037]-(fix PR comment) - For long saved search list in monitoring settings 'next' and 'done' buttons are not visible

--- a/scripts/superdesk-monitoring/styles/aggregate.less
+++ b/scripts/superdesk-monitoring/styles/aggregate.less
@@ -384,7 +384,6 @@
         position: relative;
         padding: 0;
         top: 48px;
-        max-height: calc(~"100vh - 280px") !important;
         .content {
             padding: 10px 20px;
             background-color: #fcfcfc;
